document sparc ddb commands.  PR#38312.